// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton propagates href to OptionalLink 1`] = `
<div>
  <div
    class="sc-dkPwfY kGyhkk"
  >
    <a
      class="sc-bdvwhi fMzVCf"
      data-discover="true"
      href="/some/path"
    >
      <div
        class="sc-hKwBjT hfMTZw"
      >
        <img />
      </div>
    </a>
  </div>
</div>
`;

exports[`components ImageButton propagates onClick to OptionalLink 1`] = `
<div>
  <div
    class="sc-dkPwfY kGyhkk"
  >
    <div
      class="sc-gsDMPd YBFro"
    >
      <div
        class="sc-hKwBjT hfMTZw"
      >
        <img />
      </div>
    </div>
  </div>
</div>
`;

exports[`components ImageButton renders label and image 1`] = `
<div>
  <div
    class="sc-dkPwfY kGyhkk"
  >
    <div
      class="sc-gsDMPd YBFro"
    >
      <div
        class="sc-hKwBjT hfMTZw"
      >
        <img
          src="imgsource.jpg"
        />
        my label
      </div>
    </div>
  </div>
</div>
`;
